--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-  "image": "ghcr.io/shyim/devcontainers-php:8.1-fpm",
+  "image": "mcr.microsoft.com/devcontainers/base:ubuntu",
   "features": {
     "ghcr.io/shyim/devcontainers-features/symfony-cli:latest": {},
      "ghcr.io/shyim/devcontainers-features/php:latest": {
