--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,9 @@
 {
   "image": "mcr.microsoft.com/devcontainers/base:ubuntu",
   "features": {
+    "ghcr.io/shyim/devcontainers-features/php:latest": {
+          "version": "8.1"
+     },
     "ghcr.io/shyim/devcontainers-features/symfony-cli:latest": {},
      "ghcr.io/devcontainers/features/node:1": {
           "version": "16"
