--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,6 +7,9 @@
     "ghcr.io/shyim/devcontainers-features/symfony-cli:latest": {},
      "ghcr.io/devcontainers/features/node:1": {
           "version": "16"
+     },
+     "ghcr.io/devcontainers/features/docker-from-docker:1": {
+        "dockerDashComposeVersion": "v2"
      }
   }
 }
